--- a/SD_EXIF_Editor_v2/Views/MainView.axaml
+++ b/SD_EXIF_Editor_v2/Views/MainView.axaml
@@ -101,24 +101,52 @@
 								  CornerRadius="12 0 0 0">
 							<MenuItem Header="Open"
 									  CornerRadius="12 0 0 0"
-									  Command="{Binding OpenCommand}"/>
+									  Command="{Binding OpenCommand}">
+								<MenuItem.Icon>
+									<PathIcon Data="{StaticResource Folder}"/>
+								</MenuItem.Icon>
+							</MenuItem>
 							<MenuItem Header="Close"
-									  Command="{Binding CloseCommand}"/>
+									  Command="{Binding CloseCommand}">
+								<MenuItem.Icon>
+									<PathIcon Data="{StaticResource FolderX}"/>
+								</MenuItem.Icon>
+							</MenuItem>
 							<MenuItem Header="Save">
 								<MenuItem Header="Save"
-										  Command="{Binding SaveCommand}"/>
+										  Command="{Binding SaveCommand}">
+									<MenuItem.Icon>
+										<PathIcon Data="{StaticResource Floppy}"/>
+									</MenuItem.Icon>
+								</MenuItem>
 								<MenuItem Header="Save as..."
-										  Command="{Binding SaveAsCommand}"/>
+										  Command="{Binding SaveAsCommand}">
+									<MenuItem.Icon>
+										<PathIcon Data="{StaticResource Floppy}"/>
+									</MenuItem.Icon>
+								</MenuItem>
 							</MenuItem>
 						</MenuItem>
 						<MenuItem Header="Edit">
 							<MenuItem Header="Undo"
-									  Command="{Binding UndoCommand}"/>
+									  Command="{Binding UndoCommand}">
+								<MenuItem.Icon>
+									<PathIcon Data="{StaticResource ArrowCounterclockwise}"/>
+								</MenuItem.Icon>
+							</MenuItem>
 							<MenuItem Header="Redo"
-									  Command="{Binding RedoCommand}"/>
+									  Command="{Binding RedoCommand}">
+								<MenuItem.Icon>
+									<PathIcon Data="{StaticResource ArrowClockwise}"/>
+								</MenuItem.Icon>
+							</MenuItem>
 						</MenuItem>
 						<MenuItem Header="Help">
-							<MenuItem Header="About..."/>
+							<MenuItem Header="About...">
+								<MenuItem.Icon>
+									<PathIcon Data="{StaticResource QuestionCircle}"/>
+								</MenuItem.Icon>
+							</MenuItem>
 						</MenuItem>
 
 					</Menu>
