Implemented MaximumLines setting

--- a/SD_EXIF_Editor_v2/App.axaml
+++ b/SD_EXIF_Editor_v2/App.axaml
@@ -19,6 +19,7 @@
 			<c:BoolToFloatConverter x:Key="BoolToFloatConverter"/>
 			<c:OrientationToGridIndexConverter x:Key="OrientationToGridIndexConverter"/>
 			<c:OrientationToGridSpanConverter x:Key="OrientationToGridSpanConverter"/>
+			<c:IntToDisplayStringConverter x:Key="IntToDisplayStringConverter"/>
 		</ResourceDictionary>
 	</Application.Resources>
 
