--- a/SD_EXIF_Editor_v2/Views/SettingsView.axaml
+++ b/SD_EXIF_Editor_v2/Views/SettingsView.axaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:SD_EXIF_Editor_v2.ViewModels"
 			 xmlns:interfaces="using:SD_EXIF_Editor_v2.Services.Interfaces"
+			 xmlns:system="using:System"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="550"
              x:Class="SD_EXIF_Editor_v2.SettingsView"
 			 x:DataType="vm:SettingsViewModel">
@@ -126,6 +127,26 @@
 					  Margin="8 0">
 				Display placeholders
 			</CheckBox>
+				<StackPanel Orientation="Horizontal">
+					<TextBlock Text="Maximum lines of prompt/resources"
+							   VerticalAlignment="Center"/>
+					<ComboBox SelectedItem="{Binding MaximumLines}"
+							  Margin="8 0">
+						<ComboBox.Items>
+							<system:Int32>1</system:Int32>
+							<system:Int32>2</system:Int32>
+							<system:Int32>3</system:Int32>
+							<system:Int32>4</system:Int32>
+							<system:Int32>5</system:Int32>
+							<system:Int32>2147483647</system:Int32>
+						</ComboBox.Items>
+						<ComboBox.ItemTemplate>
+							<DataTemplate>
+								<TextBlock Text="{Binding Converter={StaticResource IntToDisplayStringConverter}}"/>
+							</DataTemplate>
+						</ComboBox.ItemTemplate>
+					</ComboBox>
+				</StackPanel>
 
 			<TextBlock Text="Logging"
 					   Classes="H6"
