--- a/SD_EXIF_Editor_v2/Views/SettingsView.axaml
+++ b/SD_EXIF_Editor_v2/Views/SettingsView.axaml
@@ -20,145 +20,157 @@
 		<Separator DockPanel.Dock="Top"/>
 		<ScrollViewer>
 			<StackPanel>
-			<TextBlock Text="Browsing levels"
-					   Classes="H6 Margin"
-					   Margin="0 10"
-					   Theme="{StaticResource TitleTextBlock}"/>
-				<Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto"
-					  ColumnDefinitions="Auto,*,Auto"
-					  Margin="8 0"
-					  Background="{DynamicResource SemiColorBackground1}">
-					<TextBlock Text="None"
-							   FontWeight="Bold"
-							   HorizontalAlignment="Center"
-							   Margin="8"
-							   Grid.Row="0"
-							   Grid.Column="0"/>
-					<TextBlock Text="Safe for work. No naughty stuff"
-							   Margin="8"
-							   Grid.Row="0"
-							   Grid.Column="1"/>
-					<ToggleSwitch IsChecked="{Binding NSFWLevel, Converter={StaticResource NSFWLevelsToBoolConverter}, ConverterParameter={x:Static interfaces:NSFWLevels.None}, Mode=OneWay}"
-							  Command="{Binding ToggleNSFWLevelFlagCommand}"
-							  CommandParameter="{x:Static interfaces:NSFWLevels.None}"
-								  Margin="8"
-								  Grid.Row="0"
-								  Grid.Column="2"
-								  OffContent="" OnContent=""/>
+				<HeaderedContentControl>
+					<HeaderedContentControl.Header>
+						<TextBlock Text="Browsing levels"
+						   Classes="H6 Margin"
+						   Margin="0 10"
+						   Theme="{StaticResource TitleTextBlock}"/>
+					</HeaderedContentControl.Header>
+					<Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto"
+		  ColumnDefinitions="Auto,*,Auto"
+		  Margin="8 0"
+		  Background="{DynamicResource SemiColorBackground1}">
+						<TextBlock Text="None"
+								   FontWeight="Bold"
+								   HorizontalAlignment="Center"
+								   Margin="8"
+								   Grid.Row="0"
+								   Grid.Column="0"/>
+						<TextBlock Text="Safe for work. No naughty stuff"
+								   Margin="8"
+								   Grid.Row="0"
+								   Grid.Column="1"/>
+						<ToggleSwitch IsChecked="{Binding NSFWLevel, Converter={StaticResource NSFWLevelsToBoolConverter}, ConverterParameter={x:Static interfaces:NSFWLevels.None}, Mode=OneWay}"
+								  Command="{Binding ToggleNSFWLevelFlagCommand}"
+								  CommandParameter="{x:Static interfaces:NSFWLevels.None}"
+									  Margin="8"
+									  Grid.Row="0"
+									  Grid.Column="2"
+									  OffContent="" OnContent=""/>
 
-					<TextBlock Text="PG-13"
-							   FontWeight="Bold"
-							   HorizontalAlignment="Center"
-							   Margin="8"
-							   Grid.Row="1"
-							   Grid.Column="0"/>
-					<TextBlock Text="Revealing clothing, violence, or light gore"
-							   Margin="8"
-							   Grid.Row="1"
-							   Grid.Column="1"/>
-					<ToggleSwitch IsChecked="{Binding NSFWLevel, Converter={StaticResource NSFWLevelsToBoolConverter}, ConverterParameter={x:Static interfaces:NSFWLevels.Soft}, Mode=OneWay}"
-							  Command="{Binding ToggleNSFWLevelFlagCommand}"
-							  CommandParameter="{x:Static interfaces:NSFWLevels.Soft}"
-								  Margin="8"
-								  Grid.Row="1"
-								  Grid.Column="2"
-								  OffContent="" OnContent=""/>
+						<TextBlock Text="PG-13"
+								   FontWeight="Bold"
+								   HorizontalAlignment="Center"
+								   Margin="8"
+								   Grid.Row="1"
+								   Grid.Column="0"/>
+						<TextBlock Text="Revealing clothing, violence, or light gore"
+								   Margin="8"
+								   Grid.Row="1"
+								   Grid.Column="1"/>
+						<ToggleSwitch IsChecked="{Binding NSFWLevel, Converter={StaticResource NSFWLevelsToBoolConverter}, ConverterParameter={x:Static interfaces:NSFWLevels.Soft}, Mode=OneWay}"
+								  Command="{Binding ToggleNSFWLevelFlagCommand}"
+								  CommandParameter="{x:Static interfaces:NSFWLevels.Soft}"
+									  Margin="8"
+									  Grid.Row="1"
+									  Grid.Column="2"
+									  OffContent="" OnContent=""/>
 
-					<TextBlock Text="R"
-							   FontWeight="Bold"
-							   HorizontalAlignment="Center"
-							   Margin="8"
-							   Grid.Row="2"
-							   Grid.Column="0"/>
-					<TextBlock Text="Adult themes and situations, partial nudity, graphic violence, or death"
-							   Margin="8"
-							   Grid.Row="2"
-							   Grid.Column="1"/>
-					<ToggleSwitch IsChecked="{Binding NSFWLevel, Converter={StaticResource NSFWLevelsToBoolConverter}, ConverterParameter={x:Static interfaces:NSFWLevels.Mature}, Mode=OneWay}"
-							  Command="{Binding ToggleNSFWLevelFlagCommand}"
-							  CommandParameter="{x:Static interfaces:NSFWLevels.Mature}"
-								  Margin="8"
-								  Grid.Row="2"
-								  Grid.Column="2"
-								  OffContent="" OnContent=""/>
+						<TextBlock Text="R"
+								   FontWeight="Bold"
+								   HorizontalAlignment="Center"
+								   Margin="8"
+								   Grid.Row="2"
+								   Grid.Column="0"/>
+						<TextBlock Text="Adult themes and situations, partial nudity, graphic violence, or death"
+								   Margin="8"
+								   Grid.Row="2"
+								   Grid.Column="1"/>
+						<ToggleSwitch IsChecked="{Binding NSFWLevel, Converter={StaticResource NSFWLevelsToBoolConverter}, ConverterParameter={x:Static interfaces:NSFWLevels.Mature}, Mode=OneWay}"
+								  Command="{Binding ToggleNSFWLevelFlagCommand}"
+								  CommandParameter="{x:Static interfaces:NSFWLevels.Mature}"
+									  Margin="8"
+									  Grid.Row="2"
+									  Grid.Column="2"
+									  OffContent="" OnContent=""/>
 
-					<TextBlock Text="X"
-							   FontWeight="Bold"
-							   HorizontalAlignment="Center"
-							   Margin="8"
-							   Grid.Row="3"
-							   Grid.Column="0"/>
-					<TextBlock Text="Graphic nudity, adult objects, or settings"
-							   Margin="8"
-							   Grid.Row="3"
-							   Grid.Column="1"/>
-					<ToggleSwitch IsChecked="{Binding NSFWLevel, Converter={StaticResource NSFWLevelsToBoolConverter}, ConverterParameter={x:Static interfaces:NSFWLevels.X}, Mode=OneWay}"
-							  Command="{Binding ToggleNSFWLevelFlagCommand}"
-							  CommandParameter="{x:Static interfaces:NSFWLevels.X}"
-								  Margin="8"
-								  Grid.Row="3"
-								  Grid.Column="2"
-								  OffContent="" OnContent=""/>
+						<TextBlock Text="X"
+								   FontWeight="Bold"
+								   HorizontalAlignment="Center"
+								   Margin="8"
+								   Grid.Row="3"
+								   Grid.Column="0"/>
+						<TextBlock Text="Graphic nudity, adult objects, or settings"
+								   Margin="8"
+								   Grid.Row="3"
+								   Grid.Column="1"/>
+						<ToggleSwitch IsChecked="{Binding NSFWLevel, Converter={StaticResource NSFWLevelsToBoolConverter}, ConverterParameter={x:Static interfaces:NSFWLevels.X}, Mode=OneWay}"
+								  Command="{Binding ToggleNSFWLevelFlagCommand}"
+								  CommandParameter="{x:Static interfaces:NSFWLevels.X}"
+									  Margin="8"
+									  Grid.Row="3"
+									  Grid.Column="2"
+									  OffContent="" OnContent=""/>
 
-					<TextBlock Text="XXX"
-							   FontWeight="Bold"
-							   HorizontalAlignment="Center"
-							   Margin="8"
-							   Grid.Row="4"
-							   Grid.Column="0"/>
-					<TextBlock Text="Overtly sexual or disturbing graphic content"
-							   Margin="8"
-							   Grid.Row="4"
-							   Grid.Column="1"/>
-					<ToggleSwitch IsChecked="{Binding NSFWLevel, Converter={StaticResource NSFWLevelsToBoolConverter}, ConverterParameter={x:Static interfaces:NSFWLevels.XXX}, Mode=OneWay}"
-							  Command="{Binding ToggleNSFWLevelFlagCommand}"
-							  CommandParameter="{x:Static interfaces:NSFWLevels.XXX}"
-								  Margin="8"
-								  Grid.Row="4"
-								  Grid.Column="2"
-								  OffContent="" OnContent=""/>
-				</Grid>
-
-			<TextBlock Text="Visuals"
+						<TextBlock Text="XXX"
+								   FontWeight="Bold"
+								   HorizontalAlignment="Center"
+								   Margin="8"
+								   Grid.Row="4"
+								   Grid.Column="0"/>
+						<TextBlock Text="Overtly sexual or disturbing graphic content"
+								   Margin="8"
+								   Grid.Row="4"
+								   Grid.Column="1"/>
+						<ToggleSwitch IsChecked="{Binding NSFWLevel, Converter={StaticResource NSFWLevelsToBoolConverter}, ConverterParameter={x:Static interfaces:NSFWLevels.XXX}, Mode=OneWay}"
+								  Command="{Binding ToggleNSFWLevelFlagCommand}"
+								  CommandParameter="{x:Static interfaces:NSFWLevels.XXX}"
+									  Margin="8"
+									  Grid.Row="4"
+									  Grid.Column="2"
+									  OffContent="" OnContent=""/>
+					</Grid>
+				</HeaderedContentControl>
+				<HeaderedContentControl>
+					<HeaderedContentControl.Header>
+						<TextBlock Text="Visuals"
 					   Classes="H6"
 					   Margin="0 10"
 					   Theme="{StaticResource TitleTextBlock}"/>
-			<CheckBox IsChecked="{Binding DisplayPlaceholders}"
-					  Margin="8 0">
-				Display placeholders
-			</CheckBox>
-				<StackPanel Orientation="Horizontal">
-					<TextBlock Text="Maximum lines of prompt/resources"
-							   VerticalAlignment="Center"/>
-					<ComboBox SelectedItem="{Binding MaximumLines}"
+					</HeaderedContentControl.Header>
+					<StackPanel>
+						<CheckBox IsChecked="{Binding DisplayPlaceholders}"
 							  Margin="8 0">
-						<ComboBox.Items>
-							<system:Int32>1</system:Int32>
-							<system:Int32>2</system:Int32>
-							<system:Int32>3</system:Int32>
-							<system:Int32>4</system:Int32>
-							<system:Int32>5</system:Int32>
-							<system:Int32>2147483647</system:Int32>
-						</ComboBox.Items>
-						<ComboBox.ItemTemplate>
-							<DataTemplate>
-								<TextBlock Text="{Binding Converter={StaticResource IntToDisplayStringConverter}}"/>
-							</DataTemplate>
-						</ComboBox.ItemTemplate>
-					</ComboBox>
-				</StackPanel>
-
-			<TextBlock Text="Logging"
+							Display placeholders
+						</CheckBox>
+						<StackPanel Orientation="Horizontal">
+							<TextBlock Text="Maximum lines of prompt/resources"
+									   VerticalAlignment="Center"/>
+							<ComboBox SelectedItem="{Binding MaximumLines}"
+									  Margin="8 0">
+								<ComboBox.Items>
+									<system:Int32>1</system:Int32>
+									<system:Int32>2</system:Int32>
+									<system:Int32>3</system:Int32>
+									<system:Int32>4</system:Int32>
+									<system:Int32>5</system:Int32>
+									<system:Int32>2147483647</system:Int32>
+								</ComboBox.Items>
+								<ComboBox.ItemTemplate>
+									<DataTemplate>
+										<TextBlock Text="{Binding Converter={StaticResource IntToDisplayStringConverter}}"/>
+									</DataTemplate>
+								</ComboBox.ItemTemplate>
+							</ComboBox>
+						</StackPanel>
+					</StackPanel>
+				</HeaderedContentControl>
+				<HeaderedContentControl>
+					<HeaderedContentControl.Header>
+						<TextBlock Text="Logging"
 					   Classes="H6"
 					   Margin="0 10"
 					   Theme="{StaticResource TitleTextBlock}"/>
-			<StackPanel Orientation="Horizontal">
-				<TextBlock Text="Logging level"
-						   Margin="8 0"
-						   VerticalAlignment="Center"/>
-				<ComboBox ItemsSource="{Binding LogLevels}"
-						  SelectedItem="{Binding LogLevel}"/>
-			</StackPanel>
+					</HeaderedContentControl.Header>
+					<StackPanel Orientation="Horizontal">
+						<TextBlock Text="Logging level"
+								   Margin="8 0"
+								   VerticalAlignment="Center"/>
+						<ComboBox ItemsSource="{Binding LogLevels}"
+								  SelectedItem="{Binding LogLevel}"/>
+					</StackPanel>
+				</HeaderedContentControl>
 			</StackPanel>
 		</ScrollViewer>
 	</DockPanel>
