--- a/SD_EXIF_Editor_v2/Views/MainView.axaml
+++ b/SD_EXIF_Editor_v2/Views/MainView.axaml
@@ -32,30 +32,30 @@
 					<PathIcon Data="{StaticResource List}"/>
 				</Button>
 
-					<ToggleSwitch Theme="{DynamicResource ButtonToggleSwitch}"
-								  Command="{Binding ToggleThemeVariantCommand}"
-								  DockPanel.Dock="Bottom"
-								  HorizontalAlignment="Stretch"
-							      Margin="0 8">
-						<ToggleSwitch.OnContent>
-							<StackPanel Orientation="Horizontal">
-								<PathIcon Data="{StaticResource Sun}"
-										  Height="14"/>
-								<TextBlock Text="Theme"
-										   Margin="16 0"
-									   VerticalAlignment="Center"/>
-							</StackPanel>
-						</ToggleSwitch.OnContent>
-						<ToggleSwitch.OffContent>
-							<StackPanel Orientation="Horizontal">
-								<PathIcon Data="{StaticResource Moon}"
-										  Height="14"/>
-								<TextBlock Text="Theme"
-										   Margin="16 0"
-									   VerticalAlignment="Center"/>
-							</StackPanel>
-						</ToggleSwitch.OffContent>
-					</ToggleSwitch>
+				<ToggleSwitch Theme="{DynamicResource ButtonToggleSwitch}"
+							  Command="{Binding ToggleThemeVariantCommand}"
+							  DockPanel.Dock="Bottom"
+							  HorizontalAlignment="Stretch"
+							  Margin="0 8">
+					<ToggleSwitch.OnContent>
+						<StackPanel Orientation="Horizontal">
+							<PathIcon Data="{StaticResource Sun}"
+									  Height="14"/>
+							<TextBlock Text="Theme"
+									   Margin="16 0"
+								   VerticalAlignment="Center"/>
+						</StackPanel>
+					</ToggleSwitch.OnContent>
+					<ToggleSwitch.OffContent>
+						<StackPanel Orientation="Horizontal">
+							<PathIcon Data="{StaticResource Moon}"
+									  Height="14"/>
+							<TextBlock Text="Theme"
+									   Margin="16 0"
+								   VerticalAlignment="Center"/>
+						</StackPanel>
+					</ToggleSwitch.OffContent>
+				</ToggleSwitch>
 				<ListBox Margin="2 0 -100 0"
 						 Padding="0"
 						 ItemsSource="{Binding Items}"
@@ -94,7 +94,9 @@
 
 		<SplitView.Content>
 			<Border CornerRadius="12 0 0 0"
-					Background="{DynamicResource SemiColorBackground0}">
+					Background="{DynamicResource SemiColorBackground0}"
+					DragDrop.AllowDrop="True"
+					Name="BorderDragDrop">
 				<DockPanel>
 					<Menu DockPanel.Dock="Top">
 						<MenuItem Header="_File"
@@ -157,8 +159,29 @@
 						</MenuItem>
 
 					</Menu>
-					<TransitioningContentControl Content="{Binding CurrentPage}"
-												 Padding="10"/>
+					<Grid>
+						<TransitioningContentControl Content="{Binding CurrentPage}"
+													 Padding="10"/>
+						<Border Background="{DynamicResource SemiGrey0}"
+								Opacity="0.8"
+								Name="DragDropDisplay"
+								IsVisible="False">
+							<StackPanel HorizontalAlignment="Center"
+										VerticalAlignment="Center">
+								<PathIcon Data="{StaticResource PlusSquareDotted}"
+										  Height="80"
+										  HorizontalAlignment="Center"
+										  VerticalAlignment="Center"
+										  Opacity="2"/>
+								<TextBlock Text="Drop a file to open it"
+										   HorizontalAlignment="Center"
+										   VerticalAlignment="Center"
+										   FontSize="22"
+										   Opacity="2"
+										   Margin="24"/>
+							</StackPanel>
+						</Border>
+					</Grid>
 				</DockPanel>
 			</Border>
 		</SplitView.Content>
