--- a/SD_EXIF_Editor_v2/Views/EditMetadataView.axaml
+++ b/SD_EXIF_Editor_v2/Views/EditMetadataView.axaml
@@ -5,7 +5,7 @@
              xmlns:vm="using:SD_EXIF_Editor_v2.ViewModels"
 			 xmlns:interfaces="using:SD_EXIF_Editor_v2.ViewModels.Interfaces"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="SD_EXIF_Editor_v2.EditMetadataView"
+             x:Class="SD_EXIF_Editor_v2.Views.EditMetadataView"
 			 x:DataType="vm:EditMetadataViewModel">
 	<Design.DataContext>
 		<vm:EditMetadataViewModel/>
