--- a/SD_EXIF_Editor_v2/Views/SettingsView.axaml
+++ b/SD_EXIF_Editor_v2/Views/SettingsView.axaml
@@ -6,7 +6,7 @@
 			 xmlns:interfaces="using:SD_EXIF_Editor_v2.Services.Interfaces"
 			 xmlns:system="using:System"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="550"
-             x:Class="SD_EXIF_Editor_v2.SettingsView"
+             x:Class="SD_EXIF_Editor_v2.Views.SettingsView"
 			 x:DataType="vm:SettingsViewModel">
 	<Design.DataContext>
 		<vm:SettingsViewModel/>
@@ -20,6 +20,20 @@
 		<Separator DockPanel.Dock="Top"/>
 		<ScrollViewer>
 			<StackPanel>
+				<HeaderedContentControl>
+					<HeaderedContentControl.Header>
+						<TextBlock Text="General"
+						   Classes="H6 Margin"
+						   Margin="0 10"
+						   Theme="{StaticResource TitleTextBlock}"/>
+					</HeaderedContentControl.Header>
+					<StackPanel>
+					<CheckBox Content="Restore window size"
+							  IsChecked="{Binding ShouldKeepSize}"/>
+						<CheckBox Content="Restore window position"
+							  IsChecked="{Binding ShouldKeepPos}"/>
+					</StackPanel>
+				</HeaderedContentControl>
 				<HeaderedContentControl>
 					<HeaderedContentControl.Header>
 						<TextBlock Text="Browsing levels"
