--- a/SD_EXIF_Editor_v2/Views/EditMetadataView.axaml
+++ b/SD_EXIF_Editor_v2/Views/EditMetadataView.axaml
@@ -10,7 +10,7 @@
 	<Design.DataContext>
 		<vm:EditMetadataViewModel/>
 	</Design.DataContext>
-	<DockPanel>
+	<DockPanel Background="Transparent">
 		<TextBlock Text="Edit"
 				   DockPanel.Dock="Top"
 				   Classes="H5"
@@ -48,21 +48,12 @@
 							   VerticalAlignment="Center"
 							   IsVisible="{Binding !IsFileLoaded}"/>
 				</Grid>
-				<Grid ColumnDefinitions="*,Auto,Auto"
-					  Margin="18"
-					  DockPanel.Dock="Top">
-					<Button Content="Clear"
-							Classes="Danger"
-							Padding="14"
-							Margin="12 0"
-							Grid.Column="1"
-							Theme="{DynamicResource OutlineButton}"/>
-					<Button Content="Save"
-							Classes="Success"
-							Padding="14"
-							Grid.Column="2"
-							Theme="{DynamicResource OutlineButton}"/>
-				</Grid>
+				<Button Content="Clear"
+						Classes="Large Danger"
+						Margin="12 6"
+						HorizontalAlignment="Left"
+						Command="{Binding ClearCommand}"
+						Theme="{DynamicResource OutlineButton}"/>
 			</StackPanel>
 		</ScrollViewer>
 	</DockPanel>
