--- a/SD_EXIF_Editor_v2/Controls/ResourcesUsedControl.axaml
+++ b/SD_EXIF_Editor_v2/Controls/ResourcesUsedControl.axaml
@@ -12,10 +12,50 @@
 					   FontSize="18"/>
 		</HeaderedContentControl.Header>
 		<StackPanel Margin="0 6">
-			<ProgressBar Opacity="{Binding IsCivitServiceBusy, Converter={StaticResource BoolToFloatConverter}, ElementName=ResourcesUsedCtrl}"
+			<ProgressBar Classes.hideAnimation="{Binding !IsCivitServiceBusy, ElementName=ResourcesUsedCtrl}"
+						 Classes.showAnimation="{Binding IsCivitServiceBusy, ElementName=ResourcesUsedCtrl}"
+						 MinHeight="0"
+						 Height="4"
 						 IsIndeterminate="True"
 						 Name="BusyProgressBar"
-						 Margin="0 4"/>
+						 Margin="0 4">
+				<ProgressBar.Styles>
+					<Style Selector="ProgressBar.hideAnimation">
+						<Style.Animations>
+							<Animation Duration="0:0:0.5"
+									   FillMode="Forward">
+								<KeyFrame Cue="0%">
+									<Setter Property="Height" Value="4"/>
+									<Setter Property="Opacity" Value="1"/>
+								</KeyFrame>
+								<KeyFrame Cue="10%">
+									<Setter Property="Height" Value="4"/>
+									<Setter Property="Opacity" Value="0"/>
+								</KeyFrame>
+								<KeyFrame Cue="100%">
+									<Setter Property="Height" Value="-1"/>
+									<Setter Property="Opacity" Value="0"/>
+								</KeyFrame>
+							</Animation>
+						</Style.Animations>
+					</Style>
+					<Style Selector="ProgressBar.showAnimation">
+						<Style.Animations>
+							<Animation Duration="0:0:0"
+									   FillMode="Forward">
+								<KeyFrame Cue="0%">
+									<Setter Property="Height" Value="0"/>
+									<Setter Property="Opacity" Value="0"/>
+								</KeyFrame>
+								<KeyFrame Cue="100%">
+									<Setter Property="Height" Value="4"/>
+									<Setter Property="Opacity" Value="1"/>
+								</KeyFrame>
+							</Animation>
+						</Style.Animations>
+					</Style>
+				</ProgressBar.Styles>
+			</ProgressBar>
 			<ItemsControl ItemsSource="{Binding TruncatedItemsSource, ElementName=ResourcesUsedCtrl}"
 						  IsVisible="{Binding !ShouldDisplayPlaceholder, ElementName=ResourcesUsedCtrl}">
 				<ItemsControl.ItemsPanel>
