--- a/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
+++ b/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
@@ -5,6 +5,7 @@
              xmlns:vm="using:SD_EXIF_Editor_v2.ViewModels"
 			 xmlns:interfaces="using:SD_EXIF_Editor_v2.ViewModels.Interfaces"
 			 xmlns:c="using:SD_EXIF_Editor_v2.Controls"
+			 xmlns:ail="clr-namespace:AsyncImageLoader;assembly=AsyncImageLoader.Avalonia"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SD_EXIF_Editor_v2.Views.ViewMetadataView"
 			 x:DataType="vm:ViewMetadataViewModel">
@@ -21,14 +22,14 @@
 			<Grid ColumnDefinitions="1*,1*"
 				  RowDefinitions="2*,3*"
 				  Grid.Row="2">
-				<Image Grid.Column="0"
-					   Grid.Row="0"
-					   Grid.ColumnSpan="{Binding IsHorisontal, Converter={StaticResource OrientationToGridSpanConverter}}"
-					   Grid.RowSpan="{Binding !IsHorisontal, Converter={StaticResource OrientationToGridSpanConverter}}"
-					   IsVisible="{Binding IsFileLoaded}"
-					   Source="{Binding FileUri, Converter={StaticResource PathBitmapConverter}}"
-					   Stretch="Uniform"
-					   Margin="12"/>
+				<ail:AdvancedImage Grid.Column="0"
+								   Grid.Row="0"
+								   Grid.ColumnSpan="{Binding IsHorisontal, Converter={StaticResource OrientationToGridSpanConverter}}"
+								   Grid.RowSpan="{Binding !IsHorisontal, Converter={StaticResource OrientationToGridSpanConverter}}"
+								   IsVisible="{Binding IsFileLoaded}"
+								   Source="{Binding FileUri}"
+								   Stretch="Uniform"
+								   Margin="12"/>
 				<Border Grid.Column="0"
 						Grid.Row="0"
 						Grid.ColumnSpan="{Binding IsHorisontal, Converter={StaticResource OrientationToGridSpanConverter}}"
